# Project_2_Rust

./: Week1.pptx  deauth.pcapng  debug.pcapng  final.pcapng
Final/: .env  khokhan.txt
Final/content/: bknet134.hust.edu.vn_login.html  style.css
Final/src/: main.rs
HardProgress/Week1/: Week1.pptx
HardProgress/Week1/sha256_gen/: Cargo.toml
HardProgress/Week10/: Week10.docx  Week10.pptx
HardProgress/Week2/: Week2.pptx
HardProgress/Week2/scan_port/: Cargo.toml
HardProgress/Week2/scan_port/src/: error.rs  (+2 more)
HardProgress/Week2/scan_port_multithreading/: Cargo.toml
HardProgress/Week3/scan_ports_async/: Cargo.toml
HardProgress/Week6/: eviltwin.txt
HardProgress/Week7/: Cargo.toml  Week7.pptx
HardProgress/Week7/migrations/: 20250506200507_credentials_table.sql
HardProgress/Week8/: ReportWeek8.docx
HardProgress/Week9/: Week9.docx
Week10/: Week10.docx  ~$Week10.docx
Week2/: Week1.pptx  Week2.pptx
Week2/scan_port/src/: main.rs  ports.rs
Week2/scan_port_multithreading/src/: main.rs  ports.rs  subdomains.rs
Week3/scan_trait/: Cargo.toml
Week3/scan_trait/src/: error.rs  main.rs
Week4/: Week4.pptx
Week5/: Week5.pptx
Week6/: Week4.pptx  eviltwin.docx
Week7/: Cargo.toml  Week7.pptx  khokhan.txt
Week7/content/: after.html  index.html  styles.css
Week7/migrations/: 20250506200507_credentials_table.sql
Week7/src/: main.rs
Week8/: Week8.pptx
Week9/: Week9.docx  ~$Week9.docx
cnc_server/: Cargo.toml
cnc_server/src/: main.rs
lifetime_annotation/src/: main.rs
my_lib/src/: main.rs
sha1_cracker/: Cargo.toml
sha256_gen/src/: main.rs
(+3 files in other folders)
