[package]
name = "Week7"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7" # Hoặc phiên bản mới nhất ổn định
tokio = { version = "1", features = ["full"] } # Cần async runtime, dùng feature "full" cho đơn giản
tower-http = { version = "0.5", features = ["fs", "add-extension"] } 
serde = { version = "1.0", features = ["derive"] } # <-- Thêm serde với feature "derive"
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0" 