[package]
name = "cnc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server (Axum)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
# Xử lý JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Log
log = "0.4"
env_logger = "0.9"

# Database (tùy chọn, ban đầu có thể chỉ in ra)
# sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
# dotenv = "0.15"
# uuid = { version = "1.0", features = ["serde", "v4"] }
# chrono = { version = "0.4", features = ["serde"] }